tests/paczka1/fuzzy1/22689863.err
Error in line 21: A334 A334 5,3
Error in line 25: A334 S416 33,2
Error in line 33: m905pv S184 9,9
Error in line 32: hkGyGZp7 A334 12,6
